# Crystals

./: .gitignore  CMakeLists.txt  README.md  build.sh  qtcsettings.cmake  run.sh  submission.md  todo.txt
.cmake/api/v1/reply/: cache-v2-fcb3a255a7a41f534914.json  cmakeFiles-v1-dc65eea75d183052108d.json  codemodel-v2-8f2b44d9aa061dc9c9df.json  index-2025-12-08T13-13-23-0442.json  target-spectrum-Release-a3761784daa37badff19.json
notes/: analyze.py  bubblify.py  clean_obj.py  material_specification.txt  obj_specification.txt  rename.py  videoify.py
resources/: crystal_cave.mtl  crystal_cave_2.mtl  crystal_cave_area.mtl  diamond.mtl  final_cave.mtl  gen_crystal_cave.py  sphere.mtl
src/: main.cpp
src/renderer/: backend.cpp  backend.h  config.cpp  config.h  denoise.cpp  denoise.h  image.cpp  image.h  renderer.cpp  renderer.h
src/scene/: aabb.h  bvh.cpp  bvh.h  camera.cpp  camera.h  cie.cpp  cie.h  fourier.cpp  fourier.h  hit.h  material.cpp  material.h  primitives.cpp  primitives.h  ray.h  scene.cpp  scene.h  spectrum.cpp  spectrum.h
src/util/: halton.cpp  halton.h  jlm.h  log.h  noise.cpp  noise.h  optics.cpp  optics.h  parser.cpp  parser.h
